# Bmp-image-editor

./: .gitignore  BitAdjuster.cpp  BitAdjuster.hpp  Bitmap.cpp  Bitmap.hpp  BitmapArray.cpp  BitmapArray.hpp  BitmapDIBHeader.cpp  BitmapDIBHeader.h  BitmapDIBHeader.hpp  BitmapHeader.cpp  BitmapHeader.hpp  CMakeLists.txt  ColorPallete.cpp  ColorPallete.hpp  ErrorCode.c  ErrorCode.cpp  Matrix.c  Matrix.cpp  Matrix.h  Matrix.hpp  README.md  bmp_tester.cpp  bmp_tester.hpp  compile.txt  details.txt  file_reading.cpp  main  main.cpp  test  test.cpp  tester  tester.cpp
src/: BitAdjuster.cpp  BitAdjuster.hpp  Bitmap.cpp  Bitmap.h  Bitmap.hpp  BitmapArray.cpp  BitmapArray.hpp  BitmapDIBHeader.cpp  BitmapDIBHeader.h  BitmapDIBHeader.hpp  BitmapHeader.cpp  BitmapHeader.h  BitmapHeader.hpp  CMakeLists.txt  ColorPallete.cpp  ColorPallete.hpp  ErrorCode.h  ErrorCode.hpp  FileHandler.cpp  FileHandler.hpp  Matrix.cpp  Matrix.hpp  bmp_tester.cpp  bmp_tester.hpp
